<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="avatars">avatars</string>
    <string name="icon_views">icon views</string>
    <string name="icon_share">icon share</string>
    <string name="icon_like">icon like</string>
    <string name="options">optionts</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="edit_message">Edit Message</string>
    <string name="channel_remote_name">Notification</string>
    <string name="channel_remote_description">Description</string>
    <string name="notification_user_liked">%1$s liked the post to %2$s</string>
    <string name="error_notification_text">Update app to display notifications</string>
    <string name="error_notification_title">The app version is outdated</string>
    <string name="notification_user_uploaded_post">%1$s has published a new post:</string>

</resources>